@@ -1,7 +1,7 @@
 <?php
 
 /**
- * Back-End of Coontent_XH.
+ * Back-End of Also_XH.
  *
  * Copyright (c) 2012 Christoph M. Becker (see license.txt)
  */
@@ -16,7 +16,7 @@ if (!defined('CMSIMPLE_XH_VERSION')) {
 }
 
 
-define('COONTENT_VERSION', '1alpha1');
+define('ALSO_VERSION', '1alpha1');
 
 
 /**
@@ -24,9 +24,9 @@ define('COONTENT_VERSION', '1alpha1');
  *
  * @return string  The (X)HTML.
  */
-function coontent_version() {
-    return '<h1><a href="http://3-magi.net/?CMSimple_XH/Coontent_XH">Coontent_XH</a></h1>'."\n"
-	    .'<p>Version: '.COONTENT_VERSION.'</p>'."\n"
+function also_version() {
+    return '<h1><a href="http://3-magi.net/?CMSimple_XH/Also_XH">Also_XH</a></h1>'."\n"
+	    .'<p>Version: '.ALSO_VERSION.'</p>'."\n"
 	    .'<p>Copyright &copy; 2012 <a href="http://3-magi.net">Christoph M. Becker</a></p>'."\n"
 	    .'<p style="text-align: justify">This program is free software: you can redistribute it and/or modify'
 	    .' it under the terms of the GNU General Public License as published by'
@@ -47,18 +47,18 @@ function coontent_version() {
  *
  * @return string  The (X)HTML.
  */
-function coontent_system_check() { // RELEASE-TODO
+function also_system_check() { // RELEASE-TODO
     global $pth, $tx, $plugin_tx;
 
-    define('COONTENT_PHP_VERSION', '4.3.0');
-    $ptx = $plugin_tx['coontent'];
-    $imgdir = $pth['folder']['plugins'].'coontent/images/';
+    define('ALSO_PHP_VERSION', '4.3.0');
+    $ptx = $plugin_tx['also'];
+    $imgdir = $pth['folder']['plugins'].'also/images/';
     $ok = tag('img src="'.$imgdir.'ok.png" alt="ok"');
     $warn = tag('img src="'.$imgdir.'warn.png" alt="warning"');
     $fail = tag('img src="'.$imgdir.'fail.png" alt="failure"');
     $htm = tag('hr').'<h4>'.$ptx['syscheck_title'].'</h4>'
-	    .(version_compare(PHP_VERSION, COONTENT_PHP_VERSION) >= 0 ? $ok : $fail)
-	    .'&nbsp;&nbsp;'.sprintf($ptx['syscheck_phpversion'], COONTENT_PHP_VERSION)
+	    .(version_compare(PHP_VERSION, ALSO_PHP_VERSION) >= 0 ? $ok : $fail)
+	    .'&nbsp;&nbsp;'.sprintf($ptx['syscheck_phpversion'], ALSO_PHP_VERSION)
 	    .tag('br').tag('br')."\n";
     foreach (array('pcre') as $ext) {
 	$htm .= (extension_loaded($ext) ? $ok : $fail)
@@ -69,9 +69,9 @@ function coontent_system_check() { // RELEASE-TODO
     $htm .= (!get_magic_quotes_runtime() ? $ok : $fail)
 	    .'&nbsp;&nbsp;'.$ptx['syscheck_magic_quotes'].tag('br').tag('br')."\n";
     foreach (array('config/', 'css/', 'languages/') as $folder) {
-	$folders[] = $pth['folder']['plugins'].'coontent/'.$folder;
+	$folders[] = $pth['folder']['plugins'].'also/'.$folder;
     }
-    $folders[] = coontent_data_folder();
+    $folders[] = also_data_folder();
     foreach ($folders as $folder) {
 	$htm .= (is_writable($folder) ? $ok : $warn)
 		.'&nbsp;&nbsp;'.sprintf($ptx['syscheck_writable'], $folder).tag('br')."\n";
@@ -81,22 +81,22 @@ function coontent_system_check() { // RELEASE-TODO
 
 
 ///**
-// * Joins multiple coontent files to one.
+// * Joins multiple content files to one.
 // *
 // * @return void
 // */
-//function coontent_join() {
+//function also_join() {
 //    global $cl, $l, $h, $pd_router;
 //
 //    $cnt = '';
 //    for ($i = 0; $i < $cl; $i++) {
 //	$pd = $pd_router->find_page($i);
-//	$id = !empty($pd['coontent_id']) ? $pd['coontent_id'] : '';
+//	$id = !empty($pd['also_id']) ? $pd['also_id'] : '';
 //	$cnt .= '<h'.$l[$i].' id="'.$id.'">'.$h[$i].'</h'.$l[$i].'>'."\n"
-//		//.'<!-- coontent_id '.'-->'."\n"
-//		.coontent_fetch('main', $i);
+//		//.'<!-- also_id '.'-->'."\n"
+//		.also_fetch('main', $i);
 //    }
-//    $fn = coontent_data_folder().'main.htm';
+//    $fn = also_data_folder().'main.htm';
 //    if (($fp = fopen($fn, 'w')) === FALSE
 //	    || fwrite($fp, $cnt) === FALSE) {
 //	e('cntwriteto', 'file', $fn);
@@ -105,7 +105,7 @@ function coontent_system_check() { // RELEASE-TODO
 //}
 
 
-//function coontent_import_content() { //TODO: must read content again (may be altered by other plugins already)
+//function also_import_content() { //TODO: must read content again (may be altered by other plugins already)
 //    global $c, $cl, $cf, $pd_router;
 //
 //    for ($i = 0; $i < $cl; $i++) {
@@ -113,45 +113,45 @@ function coontent_system_check() { // RELEASE-TODO
 //	$heading = $matches[1]."\n";
 //	$body = ltrim($matches[2]);
 //	if (count($matches)!=3) {var_dump($c[$i]);}
-//	coontent_save('main', $i, $body);
+//	also_save('main', $i, $body);
 //    }
 //
 //}
 //
 //
-//function coontent_export_content() {
+//function also_export_content() {
 //
 //}
 
 
-function coontent_admin_main() {
+function also_admin_main() {
     global $sn;
 
-    $url = $sn.'?coontent&amp;admin=plugin_main&amp;action=';
+    $url = $sn.'?also&amp;admin=plugin_main&amp;action=';
     $o = '<div>'
-	    .'<a href="'.$url.'import_content">Content -> Coontent</a>'
-	    .'<a href="'.$url.'export_content">Coontent -> Content</a>'
+	    .'<a href="'.$url.'import_content">Content -> Also</a>'
+	    .'<a href="'.$url.'export_content">Also -> Content</a>'
 	    .'<a href="'.$url.'join">Join</a>'
 	    .'</div>';
     return $o;
 }
 
-if (!empty($coontent)) {
+if (!empty($also)) {
     $o .= print_plugin_admin('off');
     switch ($admin) {
 	case '':
-	    $o .= coontent_version().coontent_system_check();
+	    $o .= also_version().also_system_check();
 	    break;
 	//case 'plugin_main':
 	//    switch ($action) {
 	//	case 'import_content':
-	//	    $o .= coontent_import_content();
+	//	    $o .= also_import_content();
 	//	    break;
 	//	case 'join':
-	//	    $o .= coontent_join();
+	//	    $o .= also_join();
 	//	    break;
 	//	default:
-	//	    $o .= coontent_admin_main();
+	//	    $o .= also_admin_main();
 	//    }
 	//    break;
 	default:
