@@ -1,7 +1,7 @@
 <?php
 
 /**
- * Front-End of Coontent_XH.
+ * Front-End of Also_XH.
  *
  * Copyright (c) 2012 Christoph M. Becker (see license.txt)
  */
@@ -30,13 +30,13 @@ if (!function_exists('evaluate_scripting')) {
  *
  * @return string
  */
-function coontent_data_folder() {
+function also_data_folder() {
     global $pth, $sl, $cf, $plugin_cf;
 
-    $pcf = $plugin_cf['coontent'];
+    $pcf = $plugin_cf['also'];
 
     if ($pcf['folder_data'] == '') {
-	$fn = $pth['folder']['plugins'].'coontent/data/';
+	$fn = $pth['folder']['plugins'].'also/data/';
     } else {
 	$fn = $pth['folder']['base'].$pcf['folder_data'];
     }
@@ -59,20 +59,20 @@ function coontent_data_folder() {
 
 
 ///**
-// * Returns the coontent of page $i.
-// * (version for multiple coontent files)
+// * Returns the content of page $i.
+// * (version for multiple content files)
 // *
 // * @return string
 // */
-//function coontent_fetch($name, $i) {
+//function also_fetch($name, $i) {
 //    global $pd_router;
 //
 //    $text = '';
 //    $pd = $pd_router->find_page($i);
-//    if (empty($pd['coontent_id'])) {
+//    if (empty($pd['also_id'])) {
 //	return $text;
 //    } else {
-//	$fn = coontent_data_folder().$pd['coontent_id'].(empty($name) ? '' : '-').$name.'.htm';
+//	$fn = also_data_folder().$pd['also_id'].(empty($name) ? '' : '-').$name.'.htm';
 //	if (!is_readable($fn) || ($text = file_get_contents($fn)) === FALSE) {
 //	    e('cntopen', 'file', $fn);
 //	}
@@ -82,43 +82,43 @@ function coontent_data_folder() {
 
 
 /**
- * Returns the coontent of page $i.
- * (version for a single coontent file)
+ * Returns the content of page $i.
+ * (version for a single content file)
  *
  * @return string
  */
-function content_fetch_complete($name, $i) { // TODO: cache 1 coontent file for search
+function content_fetch_complete($name, $i) { // TODO: cache 1 content file for search
     global $cf, $pd_router;
 
     $pd = $pd_router->find_page($i);
-    if (empty($pd['coontent_id'])) {return '';}
-    $fn = coontent_data_folder().$name.'.htm';
+    if (empty($pd['also_id'])) {return '';}
+    $fn = also_data_folder().$name.'.htm';
     if (!is_readable($fn) || ($text = file_get_contents($fn)) === FALSE) {
 	e('cntopen', 'file', $fn);
 	return FALSE;
     }
     $ml = $cf['menu']['levels'];
-    preg_match('/<h[1-'.$ml.'].*?id="'.$pd['coontent_id'].'".*?>.*?<\/h[1-'.$ml.']>'
+    preg_match('/<h[1-'.$ml.'].*?id="'.$pd['also_id'].'".*?>.*?<\/h[1-'.$ml.']>'
 	    .'(.*?)<h[1-'.$ml.']/isu', $text, $matches);
     return trim($matches[1]);
 }
 
 
 ///**
-// * Saves $text as coontent of page $i.
-// * (version for multiple coontent files)
+// * Saves $text as content of page $i.
+// * (version for multiple content files)
 // *
 // * @return void
 // */
-// function coontent_save($name, $i, $text) {
+// function also_save($name, $i, $text) {
 //    global $pd_router;
 //
 //    $pd = $pd_router->find_page($i);
-//    if (empty($pd['coontent_id'])) {
-//	$pd['coontent_id'] = uniqid();
+//    if (empty($pd['also_id'])) {
+//	$pd['also_id'] = uniqid();
 //	$pd_router->update($i, $pd);
 //    }
-//    $fn = coontent_data_folder().$pd['coontent_id'].(empty($name) ? '' : '-').$name.'.htm';
+//    $fn = also_data_folder().$pd['also_id'].(empty($name) ? '' : '-').$name.'.htm';
 //    if (($fp = fopen($fn, 'w')) === FALSE
 //	    || fwrite($fp, $text) === FALSE) {
 //	e('cntwriteto', 'file', $fn);
@@ -128,30 +128,30 @@ function content_fetch_complete($name, $i) { // TODO: cache 1 coontent file for 
 
 
 /**
- * Saves $text as coontent of page $i.
- * (version for a single coontent file)
+ * Saves $text as content of page $i.
+ * (version for a single content file)
  *
  * @return void
  */
 function content_save_complete($name, $i, $text) {
     global $cl, $l, $h, $cf, $pd_router;
 
-    $fn = coontent_data_folder().$name.'.htm';
+    $fn = also_data_folder().$name.'.htm';
     $old = is_readable($fn) ? file_get_contents($fn) : '';
     $ml = $cf['menu']['levels'];
     $cnt = '<html>'."\n".'<body>'."\n";
     for ($j = 0; $j < $cl; $j++) {
 	$pd = $pd_router->find_page($j);
-	if (empty($pd['coontent_id'])) {
-	    $pd['coontent_id'] = uniqid();
+	if (empty($pd['also_id'])) {
+	    $pd['also_id'] = uniqid();
 	    $pd_router->update($j, $pd);
 	}
-	$cnt .= '<h'.$l[$j].' id="'.$pd['coontent_id'].'">'.$h[$j].'</h'.$l[$j].'>'."\n";
+	$cnt .= '<h'.$l[$j].' id="'.$pd['also_id'].'">'.$h[$j].'</h'.$l[$j].'>'."\n";
 	if ($j == $i) {
 	    $text = trim(preg_replace('/<h'.$ml.'.*?>.*?<\/h'.$ml.'>/isu', '', $text));
 	    if (!empty($text)) {$cnt .= $text."\n";}
 	} else {
-	    preg_match('/<h[1-'.$ml.'].*?id="'.$pd['coontent_id'].'".*?>.*?<\/h[1-'.$ml.']>'
+	    preg_match('/<h[1-'.$ml.'].*?id="'.$pd['also_id'].'".*?>.*?<\/h[1-'.$ml.']>'
 		    .'(.*?)<h[1-'.$ml.']/isu', $old, $matches);
 	    $cnt .= isset($matches[1]) && ($match = trim($matches[1])) != '' ? $match."\n" : '';
 	}
@@ -169,21 +169,21 @@ function content_save_complete($name, $i, $text) {
  *
  * @return string
  */
-function coontent($name, $config = FALSE) {
+function also($name, $config = FALSE) {
     global $adm, $edit, $s, $cl, $e, $plugin_tx;
 
     if (!preg_match('/^[a-z_0-9]+$/su', $name)) {
-	return '<div class="cmsimplecore_warning">'.$plugin_tx['coontent']['error_invalid_name'].'</div>'."\n";
+	return '<div class="cmsimplecore_warning">'.$plugin_tx['also']['error_invalid_name'].'</div>'."\n";
     }
     if ($s < 0 || $s >= $cl) {return '';}
     $o = '';
     if ($adm && $edit) {
-	if (isset($_POST['coontent_text'])) {
-	    content_save_complete($name, $s, stsl($_POST['coontent_text']));
+	if (isset($_POST['also_text'])) {
+	    content_save_complete($name, $s, stsl($_POST['also_text']));
 	}
-	$id = 'coontent_text'.$name;
+	$id = 'also_text'.$name;
 	$o .= '<form action="" method="POST">'."\n"
-		.'<textarea id="'.$id.'" name="coontent_text">'.content_fetch_complete($name, $s).'</textarea>'."\n"
+		.'<textarea id="'.$id.'" name="also_text">'.content_fetch_complete($name, $s).'</textarea>'."\n"
 		.tag('input type="submit" class="submit"') // TODO: conditionally keep submit for compatibility < 1.5
 		.'</form>'."\n";
 	if (function_exists('editor_replace')) {
@@ -201,7 +201,7 @@ function coontent($name, $config = FALSE) {
 /**
  *
  */
-function coontent_enable() {
+function also_enable() {
     global $adm, $edit;
 
     if ($adm && $edit && function_exists('include_editor')) {
@@ -211,9 +211,9 @@ function coontent_enable() {
 
 
 /**
- * Register the coontent id in the page data.
+ * Register the also id in the page data.
  */
-$pd_router->add_interest('coontent_id');
+$pd_router->add_interest('also_id');
 
 
 //if ($f == 'search') {
