@@ -1,17 +1,0 @@
-<?php
-
-$plugin_tx['coontent']['utf8-marker']="äöüß";
-
-$plugin_tx['coontent']['syscheck_title']="System check";
-$plugin_tx['coontent']['syscheck_phpversion']="PHP version ≥ %s";
-$plugin_tx['coontent']['syscheck_extension']="Extension '%s' loaded";
-$plugin_tx['coontent']['syscheck_encoding']="Encoding 'UTF-8' configured";
-$plugin_tx['coontent']['syscheck_magic_quotes']="Magic quotes runtime off";
-$plugin_tx['coontent']['syscheck_writable']="Folder '%s' writable";
-
-$plugin_tx['coontent']['error_invalid_name']="Coontent names may contain a-z, 0-9 and _ only!";
-
-$plugin_tx['coontent']['cf_utf8-marker']="Internal usage. <strong>Do not change!</strong>";
-$plugin_tx['coontent']['cf_folder_data']="Path to a folder relative to the CMSimple root directory, where to store the plugin's data. E.g. \"userfiles/coontent/\". Leave blank to store into the plugin's data/ folder.";
-
-?>
